# grasp_ws

./: .gitignore  .gitmodules  README.md  r1pro.md  r1pro_grasp.md  r1pro_grasp_box.md  setup_all.zsh
grasp_orchestrator/: package.xml  setup.cfg  setup.py
grasp_orchestrator/config/: camera_topics_local_d405.yaml  camera_topics_r1pro.yaml
grasp_orchestrator/grasp_orchestrator/: __init__.py  detection_bridge_service.py  pose_utils.py
grasp_orchestrator/launch/: grasp_detection.launch.py
grasp_orchestrator/resource/: grasp_orchestrator
grasp_orchestrator_interfaces/: CMakeLists.txt  package.xml
grasp_orchestrator_interfaces/srv/: DetectGraspPose.srv
mission_controller/: package.xml  setup.py
mission_controller/config/: grasp_preview.rviz  mission.yaml
mission_controller/launch/: grasp_preview.launch.py  mission.launch.py  mission_system.launch.py
mission_controller/mission_controller/: __init__.py  grasp_preview_publisher.py  grasp_target_executor.py  mission_controller.py
mission_controller/test/: mission_mock.yaml  mock_mission_flow.py
mission_interfaces/: CMakeLists.txt  package.xml
mission_interfaces/action/: ExecuteBinGrasp.action  ExecuteBinPlace.action  ExecuteBoxGrasp.action  ExecuteBoxPlace.action  ExecuteGrasp.action  ExecutePlace.action
